Se agrega pagina 404

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
                         </button>
                     </div>
 
+                    <a href="./pages/page404.html">Compras</a>
+
                     <article class="textGrad" class="textoCentrado">
                         Muebles Pedraza woods are coniferous kind domestic products.
                         Even when seeking ways to use its gentle texture and softness,
