Se agrega compras al menu de opciones

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <li class="navegador__item"><a class="navegador__link" href="./pages/product.html">Products</a></li>
                     <li class="navegador__item"><a class="navegador__link" href="./pages/aboutus.html">About Us</a></li>
                     <li class="navegador__item"><a class="navegador__link" href="./pages/contact.html">Contact</a></li>
+                    <li class="navegador__item"><a class="navegador__link" href="./pages/page404.html">Compras</a></li>                    
                 </ul>
             </nav>
         </div>
@@ -66,9 +67,7 @@
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                         </button>
-                    </div>
-
-                    <a href="./pages/page404.html">Compras</a>
+                    </div>                    
 
                     <article class="textGrad" class="textoCentrado">
                         Muebles Pedraza woods are coniferous kind domestic products.
