--- a/pages/page404.html
+++ b/pages/page404.html
@@ -5,35 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 not found</title>
-    <style>
-        h1 {
-            font-size: 80px;
-        }
-
-        h2{
-            font-size: 70px;
-        }
-
-        .flex {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-
-        image {
-            width: 600px;
-            height: 800px;
-        }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Spectral+SC:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/estilo.css">
+    <title>404 page not found</title>
 </head>
 
 <body>
-    <div class="flex">
-        <h1>404</h1>
-        <img src="../media/imagen404.jpg" alt="imagen404">
-        <h2>Page not found</h2>
+    <div class="gridContainer">
+        <div class="headerOne">
+            <header class="margenes">
+                <h1 class="titleSize textoCentrado">404</h1>
+            </header>
+        </div>
+        <div class="mainOne">
+            <img class="imgLogo" src="../media/imagen404.jpg" alt="imagen 404">
+        </div>
+        <div class="footOne">
+            <footer class="margFooter">
+                <h2 class="titleSize textoCentrado">Page not found</h2>
+            </footer>
+        </div>
     </div>
 </body>
 
