Se agrega pagina 404 a todas las demas paginas

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -35,6 +35,7 @@
                 <li class="navegador__item"><a class="navegador__link" href="./product.html">Products</a></li>
                 <li class="navegador__item"><a class="navegador__link" href="./aboutus.html">About Us</a></li>
                 <li class="navegador__item"><a class="navegador__link" href="./contact.html">Contact</a></li>
+                <li class="navegador__item"><a class="navegador__link" href="./page404.html">Compras</a></li>
             </ul>
         </nav>
     </div>
